force-app/main/default/objects/Survey_Result__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>