force-app/main/default/objects/Survey_Result__c/fields/AccountOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerEmail__c</fullName>
    <label>AccountOwnerEmail</label>
    <type>Email</type>
</CustomField>