force-app/main/default/objects/Survey_Result__c/fields/Additional_Feedback_EN__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_EN__c</fullName>
    <label>Additional Feedback EN</label>
    <type>TextArea</type>
</CustomField>