force-app/main/default/objects/Survey_Result__c/fields/Additional_Feedback_Long__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_Long__c</fullName>
    <description>Field to capture truncated comments</description>
    <label>Additional Feedback Long</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>