force-app/main/default/objects/Survey_Result__c/fields/Allpoint__c.field-meta.xml
<CustomField>
    <fullName>Allpoint__c</fullName>
    <label>Allpoint</label>
    <length>40</length>
    <type>Text</type>
</CustomField>