force-app/main/default/objects/Survey_Result__c/fields/Aloha_Kitchen__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Kitchen__c</fullName>
    <label>Aloha Kitchen</label>
    <length>40</length>
    <type>Text</type>
</CustomField>