force-app/main/default/objects/Survey_Result__c/fields/Aloha_POS__c.field-meta.xml
<CustomField>
    <fullName>Aloha_POS__c</fullName>
    <label>Aloha POS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>