force-app/main/default/objects/Survey_Result__c/fields/ATM_60_Series__c.field-meta.xml
<CustomField>
    <fullName>ATM_60_Series__c</fullName>
    <label>ATM 60 Series</label>
    <length>40</length>
    <type>Text</type>
</CustomField>