force-app/main/default/objects/Survey_Result__c/fields/ATM_Branding__c.field-meta.xml
<CustomField>
    <fullName>ATM_Branding__c</fullName>
    <label>ATM Branding</label>
    <length>40</length>
    <type>Text</type>
</CustomField>