force-app/main/default/objects/Survey_Result__c/fields/ATM_Marketing__c.field-meta.xml
<CustomField>
    <fullName>ATM_Marketing__c</fullName>
    <label>ATM Marketing</label>
    <length>40</length>
    <type>Text</type>
</CustomField>