force-app/main/default/objects/Survey_Result__c/fields/ATM_Placement__c.field-meta.xml
<CustomField>
    <fullName>ATM_Placement__c</fullName>
    <label>ATM Placement</label>
    <length>40</length>
    <type>Text</type>
</CustomField>