force-app/main/default/objects/Survey_Result__c/fields/ATMaaS__c.field-meta.xml
<CustomField>
    <fullName>ATMaaS__c</fullName>
    <label>ATMaaS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>