force-app/main/default/objects/Survey_Result__c/fields/Back_Office__c.field-meta.xml
<CustomField>
    <fullName>Back_Office__c</fullName>
    <label>Back Office</label>
    <length>40</length>
    <type>Text</type>
</CustomField>