force-app/main/default/objects/Survey_Result__c/fields/Biggest_Impact_of_NCRaaS__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Impact_of_NCRaaS__c</fullName>
    <label>Biggest Impact of NCRaaS</label>
    <type>TextArea</type>
</CustomField>