force-app/main/default/objects/Survey_Result__c/fields/Biggest_Impact_of_NCRaaS_Long__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Impact_of_NCRaaS_Long__c</fullName>
    <label>Biggest Impact of NCRaaS Long</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>