force-app/main/default/objects/Survey_Result__c/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <label>Cash Management</label>
    <length>40</length>
    <type>Text</type>
</CustomField>