force-app/main/default/objects/Survey_Result__c/fields/Channel_Services_Team__c.field-meta.xml
<CustomField>
    <fullName>Channel_Services_Team__c</fullName>
    <label>Channel Services Team</label>
    <type>TextArea</type>
</CustomField>