force-app/main/default/objects/Survey_Result__c/fields/Communications__c.field-meta.xml
<CustomField>
    <fullName>Communications__c</fullName>
    <label>Communications</label>
    <length>40</length>
    <type>Text</type>
</CustomField>