force-app/main/default/objects/Survey_Result__c/fields/Competitor_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Comparison__c</fullName>
    <label>Competitor Comparison</label>
    <length>40</length>
    <type>Text</type>
</CustomField>