force-app/main/default/objects/Survey_Result__c/fields/Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Role__c</fullName>
    <formula>Contact__r.Current_Role__c</formula>
    <label>Current Role</label>
    <type>Text</type>
</CustomField>