force-app/main/default/objects/Survey_Result__c/fields/Data_Center_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Infrastructure__c</fullName>
    <label>Data Center Infrastructure</label>
    <length>40</length>
    <type>Text</type>
</CustomField>