force-app/main/default/objects/Survey_Result__c/fields/Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration__c</fullName>
    <label>Deal Registration Incentive</label>
    <length>40</length>
    <type>Text</type>
</CustomField>