force-app/main/default/objects/Survey_Result__c/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <formula>TEXT(Contact__r.Decision_Maker__c)</formula>
    <label>Decision Maker</label>
    <type>Text</type>
</CustomField>