force-app/main/default/objects/Survey_Result__c/fields/Delivery_and_Installation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_and_Installation__c</fullName>
    <label>Delivery and Installation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>