force-app/main/default/objects/Survey_Result__c/fields/Design_and_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Design_and_Consulting__c</fullName>
    <label>Design and Consulting</label>
    <length>40</length>
    <type>Text</type>
</CustomField>