force-app/main/default/objects/Survey_Result__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <formula>CASE(NPS_Score__c, 10,0,9,0,8,0,7,0,6,1,5,1,4,1,3,1,2,1,1,1,0,1,0)</formula>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>