force-app/main/default/objects/Survey_Result__c/fields/Doing_Business_with_NCR__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_with_NCR__c</fullName>
    <inlineHelpText>It would matter a lot if your company could not do business with NCR.</inlineHelpText>
    <label>Doing Business with NCR</label>
    <length>25</length>
    <type>Text</type>
</CustomField>