force-app/main/default/objects/Survey_Result__c/fields/Effort_Working_with_NCR__c.field-meta.xml
<CustomField>
    <fullName>Effort_Working_with_NCR__c</fullName>
    <inlineHelpText>Overall Effort Working with NCR</inlineHelpText>
    <label>Effort Working with NCR</label>
    <length>75</length>
    <type>Text</type>
</CustomField>