force-app/main/default/objects/Survey_Result__c/fields/Enpoint_Security__c.field-meta.xml
<CustomField>
    <fullName>Enpoint_Security__c</fullName>
    <label>Enpoint Security</label>
    <length>40</length>
    <type>Text</type>
</CustomField>