force-app/main/default/objects/Survey_Result__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>