force-app/main/default/objects/Survey_Result__c/fields/Experience_Dissatisfaction_EN_Long__c.field-meta.xml
<CustomField>
    <fullName>Experience_Dissatisfaction_EN_Long__c</fullName>
    <label>Experience Dissatisfaction EN Long</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>