force-app/main/default/objects/Survey_Result__c/fields/Freshop__c.field-meta.xml
<CustomField>
    <fullName>Freshop__c</fullName>
    <label>Freshop</label>
    <length>40</length>
    <type>Text</type>
</CustomField>