force-app/main/default/objects/Survey_Result__c/fields/Government_Payments_Portal__c.field-meta.xml
<CustomField>
    <fullName>Government_Payments_Portal__c</fullName>
    <label>Government Payments Portal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>