force-app/main/default/objects/Survey_Result__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <label>Hardware</label>
    <length>25</length>
    <type>Text</type>
</CustomField>