force-app/main/default/objects/Survey_Result__c/fields/How_could_NCR_improve_Partner_Team_Suppo__c.field-meta.xml
<CustomField>
    <fullName>How_could_NCR_improve_Partner_Team_Suppo__c</fullName>
    <label>How could NCR improve Partner Team Suppo</label>
    <type>TextArea</type>
</CustomField>