force-app/main/default/objects/Survey_Result__c/fields/How_to_Improve_Experiences__c.field-meta.xml
<CustomField>
    <fullName>How_to_Improve_Experiences__c</fullName>
    <label>How to Improve Experiences</label>
    <type>TextArea</type>
</CustomField>