force-app/main/default/objects/Survey_Result__c/fields/Immediate_Issues_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Issues_Concerns__c</fullName>
    <label>Immediate Issues/Concerns</label>
    <length>25</length>
    <type>Text</type>
</CustomField>