force-app/main/default/objects/Survey_Result__c/fields/Improve_Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Improve_Program_Offering__c</fullName>
    <label>Improve Program Offering</label>
    <type>TextArea</type>
</CustomField>