force-app/main/default/objects/Survey_Result__c/fields/Inetco_Insight__c.field-meta.xml
<CustomField>
    <fullName>Inetco_Insight__c</fullName>
    <label>Inetco Insight</label>
    <length>40</length>
    <type>Text</type>
</CustomField>