force-app/main/default/objects/Survey_Result__c/fields/Info_Regarding_Issue_Concern_EN__c.field-meta.xml
<CustomField>
    <fullName>Info_Regarding_Issue_Concern_EN__c</fullName>
    <label>Info Regarding Issue Concern EN</label>
    <type>TextArea</type>
</CustomField>