force-app/main/default/objects/Survey_Result__c/fields/Info_Regarding_Issue_Concern_EN_Long__c.field-meta.xml
<CustomField>
    <fullName>Info_Regarding_Issue_Concern_EN_Long__c</fullName>
    <description>Field to capture truncated comments</description>
    <label>Info Regarding Issue/Concern EN Long</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>