force-app/main/default/objects/Survey_Result__c/fields/Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Invoicing__c</fullName>
    <label>Invoicing</label>
    <length>25</length>
    <type>Text</type>
</CustomField>