force-app/main/default/objects/Survey_Result__c/fields/ITM__c.field-meta.xml
<CustomField>
    <fullName>ITM__c</fullName>
    <label>ITM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>