force-app/main/default/objects/Survey_Result__c/fields/Maintenance_and_Support__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_and_Support__c</fullName>
    <label>Maintenance and Support</label>
    <length>40</length>
    <type>Text</type>
</CustomField>