force-app/main/default/objects/Survey_Result__c/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <formula>Contact__r.Account.Master_Customer_Number__c</formula>
    <label>Master Customer Number</label>
    <type>Text</type>
</CustomField>