force-app/main/default/objects/Survey_Result__c/fields/NCR_Analytics__c.field-meta.xml
<CustomField>
    <fullName>NCR_Analytics__c</fullName>
    <label>NCR Analytics</label>
    <length>40</length>
    <type>Text</type>
</CustomField>