force-app/main/default/objects/Survey_Result__c/fields/NDC_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>NDC_Enterprise__c</fullName>
    <label>NDC Enterprise</label>
    <length>40</length>
    <type>Text</type>
</CustomField>