force-app/main/default/objects/Survey_Result__c/fields/New_Innovations_Long__c.field-meta.xml
<CustomField>
    <fullName>New_Innovations_Long__c</fullName>
    <label>New Innovations Long</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>