force-app/main/default/objects/Survey_Result__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <formula>CASE(NPS_Score__c, 10,&apos;Promoter&apos;,9,&apos;Promoter&apos;,8,&apos;Passive&apos;,7,&apos;Passive&apos;,6,&apos;Detractor&apos;,5,&apos;Detractor&apos;,4,&apos;Detractor&apos;,3,&apos;Detractor&apos;,2,&apos;Detractor&apos;,1,&apos;Detractor&apos;,0,&apos;Detractor&apos;,&apos;&apos;)</formula>
    <label>NPS Category</label>
    <type>Text</type>
</CustomField>