force-app/main/default/objects/Survey_Result__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <label>Likely to Recommend</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>