force-app/main/default/objects/Survey_Result__c/fields/Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Other_Text__c</fullName>
    <label>Other Text</label>
    <type>TextArea</type>
</CustomField>