force-app/main/default/objects/Survey_Result__c/fields/Overall_Rating_of_NCR_Service_Org_Enable__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating_of_NCR_Service_Org_Enable__c</fullName>
    <label>Overall Rating of NCR Service Org Enable</label>
    <type>TextArea</type>
</CustomField>