force-app/main/default/objects/Survey_Result__c/fields/Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction__c</fullName>
    <label>Overall Satisfaction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>