force-app/main/default/objects/Survey_Result__c/fields/Partner_Assist__c.field-meta.xml
<CustomField>
    <fullName>Partner_Assist__c</fullName>
    <label>Partner Assist Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>