force-app/main/default/objects/Survey_Result__c/fields/Partner_Attitude_Feedback_EN_Long__c.field-meta.xml
<CustomField>
    <fullName>Partner_Attitude_Feedback_EN_Long__c</fullName>
    <label>Partner Attitude Feedback EN Long</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>