force-app/main/default/objects/Survey_Result__c/fields/Partner_Field_Calls__c.field-meta.xml
<CustomField>
    <fullName>Partner_Field_Calls__c</fullName>
    <label>Partner Field Calls</label>
    <type>TextArea</type>
</CustomField>