force-app/main/default/objects/Survey_Result__c/fields/Partner_Monthly_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Partner_Monthly_Newsletter__c</fullName>
    <label>Partner Monthly Newsletter</label>
    <type>TextArea</type>
</CustomField>