force-app/main/default/objects/Survey_Result__c/fields/Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>