force-app/main/default/objects/Survey_Result__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <formula>CASE(NPS_Score__c, 10,1,9,1,8,0,7,0,6,0,5,0,4,0,3,0,2,0,1,0,0,0,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>