force-app/main/default/objects/Survey_Result__c/fields/Provides_Good_Value__c.field-meta.xml
<CustomField>
    <fullName>Provides_Good_Value__c</fullName>
    <label>Provides Good Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>