force-app/main/default/objects/Survey_Result__c/fields/Qualtrics_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Response_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Qualtrics Response ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>