force-app/main/default/objects/Survey_Result__c/fields/Qualtrics_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Survey_ID__c</fullName>
    <label>Qualtrics Survey ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>