force-app/main/default/objects/Survey_Result__c/fields/Reason_for_Ratings_of_NCR_Products_Ser__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Ratings_of_NCR_Products_Ser__c</fullName>
    <label>Reason for Ratings of NCR Products &amp; Ser</label>
    <type>TextArea</type>
</CustomField>