force-app/main/default/objects/Survey_Result__c/fields/Reason_for_Recommend_Rating_EN_Long__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Recommend_Rating_EN_Long__c</fullName>
    <description>Field to capture truncated comments</description>
    <label>Reason for Recommend Rating EN Long</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>