force-app/main/default/objects/Survey_Result__c/fields/Recycling_SR__c.field-meta.xml
<CustomField>
    <fullName>Recycling_SR__c</fullName>
    <label>Recycling SR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>