force-app/main/default/objects/Survey_Result__c/fields/Reliability__c.field-meta.xml
<CustomField>
    <fullName>Reliability__c</fullName>
    <label>Reliability</label>
    <length>40</length>
    <type>Text</type>
</CustomField>