force-app/main/default/objects/Survey_Result__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <label>Renewal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>