force-app/main/default/objects/Survey_Result__c/fields/Requires_Most_Effort__c.field-meta.xml
<CustomField>
    <fullName>Requires_Most_Effort__c</fullName>
    <inlineHelpText>Which experiences require the most effort?</inlineHelpText>
    <label>Requires Most Effort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales/Account Team</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Delivery and Installation</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>