force-app/main/default/objects/Survey_Result__c/fields/Requires_Most_Effort_Long__c.field-meta.xml
<CustomField>
    <fullName>Requires_Most_Effort_Long__c</fullName>
    <label>Requires Most Effort Long</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>