force-app/main/default/objects/Survey_Result__c/fields/Respondent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Respondent_End_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Respondent End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>