force-app/main/default/objects/Survey_Result__c/fields/Restaurant_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Hardware__c</fullName>
    <label>Restaurant Hardware</label>
    <length>40</length>
    <type>Text</type>
</CustomField>