force-app/main/default/objects/Survey_Result__c/fields/Retail_Kiosks__c.field-meta.xml
<CustomField>
    <fullName>Retail_Kiosks__c</fullName>
    <label>Retail Kiosks</label>
    <length>40</length>
    <type>Text</type>
</CustomField>