force-app/main/default/objects/Survey_Result__c/fields/SCO_Hardware_AIIP__c.field-meta.xml
<CustomField>
    <fullName>SCO_Hardware_AIIP__c</fullName>
    <label>SCO Hardware AIIP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>