force-app/main/default/objects/Survey_Result__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <label>Security</label>
    <length>40</length>
    <type>Text</type>
</CustomField>