force-app/main/default/objects/Survey_Result__c/fields/Seismic_Assets__c.field-meta.xml
<CustomField>
    <fullName>Seismic_Assets__c</fullName>
    <label>Seismic - Market &amp; Solution Assets</label>
    <length>40</length>
    <type>Text</type>
</CustomField>