force-app/main/default/objects/Survey_Result__c/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <label>Software</label>
    <length>25</length>
    <type>Text</type>
</CustomField>