force-app/main/default/objects/Survey_Result__c/fields/Software_Defined_Store__c.field-meta.xml
<CustomField>
    <fullName>Software_Defined_Store__c</fullName>
    <label>Software Defined Store</label>
    <length>40</length>
    <type>Text</type>
</CustomField>