force-app/main/default/objects/Survey_Result__c/fields/Software_Support_Services__c.field-meta.xml
<CustomField>
    <fullName>Software_Support_Services__c</fullName>
    <label>Software Support Services</label>
    <length>40</length>
    <type>Text</type>
</CustomField>