force-app/main/default/objects/Survey_Result__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution Design</label>
    <length>40</length>
    <type>Text</type>
</CustomField>