force-app/main/default/objects/Survey_Result__c/fields/Solution_Dissatisfaction_Long__c.field-meta.xml
<CustomField>
    <fullName>Solution_Dissatisfaction_Long__c</fullName>
    <label>Solution Dissatisfaction Long</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>