force-app/main/default/objects/Survey_Result__c/fields/Solution_Performance__c.field-meta.xml
<CustomField>
    <fullName>Solution_Performance__c</fullName>
    <label>Solution Performance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>