force-app/main/default/objects/Survey_Result__c/fields/Staging_and_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Staging_and_Logistics__c</fullName>
    <label>Staging and Logistics</label>
    <length>40</length>
    <type>Text</type>
</CustomField>