force-app/main/default/objects/Survey_Result__c/fields/Storepoint__c.field-meta.xml
<CustomField>
    <fullName>Storepoint__c</fullName>
    <label>Storepoint</label>
    <length>40</length>
    <type>Text</type>
</CustomField>