force-app/main/default/objects/Survey_Result__c/fields/Technical_Support__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support__c</fullName>
    <label>Technical Support</label>
    <type>TextArea</type>
</CustomField>