force-app/main/default/objects/Survey_Result__c/fields/Terminal_Handler__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Handler__c</fullName>
    <label>Terminal Handler</label>
    <length>40</length>
    <type>Text</type>
</CustomField>