force-app/main/default/objects/Survey_Result__c/fields/Transaction_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Gateway__c</fullName>
    <label>Transaction Gateway</label>
    <length>40</length>
    <type>Text</type>
</CustomField>