force-app/main/default/objects/Survey_Result__c/fields/Transition_Services__c.field-meta.xml
<CustomField>
    <fullName>Transition_Services__c</fullName>
    <label>Transition Services</label>
    <length>40</length>
    <type>Text</type>
</CustomField>