force-app/main/default/objects/Survey_Result__c/fields/Wave__c.field-meta.xml
<CustomField>
    <fullName>Wave__c</fullName>
    <description>Survey wave</description>
    <label>Cycle</label>
    <length>25</length>
    <type>Text</type>
</CustomField>