force-app/main/default/objects/Survey_Result__c/fields/What_could_NCR_do_to_Provide_More_Value__c.field-meta.xml
<CustomField>
    <fullName>What_could_NCR_do_to_Provide_More_Value__c</fullName>
    <label>What could NCR do to Provide More Value</label>
    <type>TextArea</type>
</CustomField>