force-app/main/default/objects/Survey_Result__c/fields/Wireless_LAN__c.field-meta.xml
<CustomField>
    <fullName>Wireless_LAN__c</fullName>
    <label>Wireless LAN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>