force-app/main/default/objects/Survey_Result__c/fields/XFS__c.field-meta.xml
<CustomField>
    <fullName>XFS__c</fullName>
    <label>XFS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>